--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     "react/jsx-props-no-spreading": "off",
     "react/require-default-props": "off",
     "react-hooks/rules-of-hooks": "error",
+    "react/jsx-no-bind": "off",
     /*
      * Prettier rules
      */
